changes to build executable jar