@@ -1,1 +1,4 @@
 # trimigosbooks
+
+java --module-path C:\trimigosbooks\target\libs --add-modules=javafx.controls,javafx.fxml -jar t
+rimigosbooks-1.0.0-jar-with-dependencies.jar
